src/other/mico-2.3.12/test/idl/error/expected-stderr-case4.idl
case4.idl:13: identifier 'm' defined twice in this scope
